gave it the wrong name

--- a/templates/about.html
+++ b/templates/about.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <h1>cyber_out</h1>
+    <h1>cyber_hook</h1>
     <h2>enjoy!</h2>
     <p><a href="https://github.com/archangelic/cyber_hook">Source Code</a></p>
     <p>by <a href="https://cybre.space/@archangelic">archangelic</a></p>
