--- a/templates/dnd.html
+++ b/templates/dnd.html
@@ -7,12 +7,21 @@
 <style>
 body {
     color: white;
-    background: #9f3cd6;
+    background: #D93434;
 }
 .boxed {
     border: 1px solid;
     display: inline-block;
     padding: 10px;
+}
+a:link {
+    color: lightgray;
+}
+a:visited {
+    color: lightgray;
+}
+a:hover {
+    color: lightgray;
 }
 </style>
 </head>
@@ -22,6 +31,9 @@ body {
     <div class="boxed">
         {{ snippet }}
     </div>
+    <script>
+        <button onclick="location.reload();">Generate</button>
+    </script>
     <p> go to <a href="http://cyber.archangelic.space/dnd/snippet">http://cyber.archangelic.space/dnd/snippet</a> for a random plaintext dnd character generated using tracery</p>
     <p><a href="https://github.com/archangelic/cyber_hook">Source Code</a></p>
     <p>by <a href="https://cybre.space/@archangelic">archangelic</a></p>
