--- a/templates/dnd.html
+++ b/templates/dnd.html
@@ -31,7 +31,7 @@ a:hover {
     <div class="boxed">
         {{ snippet }}
     </div>
-    <button value="Generate" onClick="window.location.reload();" />
+    <form><input type=button value="Generate" onClick="window.location.reload()"></form>
     <p> go to <a href="http://cyber.archangelic.space/dnd/snippet">http://cyber.archangelic.space/dnd/snippet</a> for a random plaintext dnd character generated using tracery</p>
     <p><a href="https://github.com/archangelic/cyber_hook">Source Code</a></p>
     <p>by <a href="https://cybre.space/@archangelic">archangelic</a></p>
