add buttons to other templates

--- a/templates/magic.html
+++ b/templates/magic.html
@@ -31,6 +31,7 @@ a:hover {
     <div class="boxed">
         {{ snippet }}
     </div>
+    <form><input type=button value="Generate" onClick="window.location.reload()"></form>
     <p> go to <a href="http://cyber.archangelic.space/magic/snippet">http://cyber.archangelic.space/magic/snippet</a> for a random plaintext magic tome generated using tracery</p>
     <p><a href="https://github.com/archangelic/cyber_hook">Source Code</a></p>
     <p>by <a href="https://cybre.space/@archangelic">archangelic</a></p>
