--- a/templates/about.html
+++ b/templates/about.html
@@ -33,6 +33,7 @@ a:hover {
     <div class="boxed">
         {{ snippet }}
     </div>
+    <form><input type=button value="Generate" onClick="window.location.reload()"></form>
     <p> go to <a href="http://cyber.archangelic.space/snippet">http://cyber.archangelic.space/snippet</a> for a random plaintext snippet generated using markov chains and cyberpunk novels</p>
     <p><a href="https://github.com/archangelic/cyber_hook">Source Code</a></p>
     <p>by <a href="https://cybre.space/@archangelic">archangelic</a></p>
