add updates to cyber

--- a/templates/about.html
+++ b/templates/about.html
@@ -24,6 +24,12 @@ a:hover {
     display: inline-block;
     padding: 10px;
 }
+input {
+    color: DarkOrange;
+    border: 1px solid DarkOrange;
+    background-color: black;
+    margin: 5px 0px;
+}
 </style>
 </head>
 
@@ -37,5 +43,10 @@ a:hover {
     <p> go to <a href="http://cyber.archangelic.space/snippet">http://cyber.archangelic.space/snippet</a> for a random plaintext snippet generated using markov chains and cyberpunk novels</p>
     <p><a href="https://github.com/archangelic/cyber_hook">Source Code</a></p>
     <p>by <a href="https://cybre.space/@archangelic">archangelic</a></p>
+    <p>See also:</p>
+    <ul>
+	    <li><a href="magic">Magic Tome Generator</a></li>
+	    <li><a href="dnd">D&D Character Generator</a></li>
+    </ul>
 </body>
 </html>
