--- a/templates/dnd.html
+++ b/templates/dnd.html
@@ -23,6 +23,12 @@ a:visited {
 a:hover {
     color: lightgray;
 }
+input {
+    color: white;
+    border: 1px solid white;
+    background-color: #D93434;
+    margin: 5px 0px;
+}
 </style>
 </head>
 
