--- a/templates/magic.html
+++ b/templates/magic.html
@@ -23,6 +23,12 @@ a:hover {
     display: inline-block;
     padding: 10px;
 }
+input {
+    color: #f9bf3b;
+    border: 1px solid #f9bf3b;
+    background-color: #9f3cd6;
+    margin: 5px 0px;
+}
 </style>
 </head>
 
