--- a/templates/dnd.html
+++ b/templates/dnd.html
@@ -3,11 +3,17 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Archangelic's Random DND Character generator</title>
 <style>
 body {
+    margin:40px auto;
+    max-width:650px;
+    line-height:1.6;
+    font-size:18px;
     color: white;
-    background: #D93434;
+    background: #910000;
+    padding:0 10px;
 }
 .boxed {
     border: 1px solid;
@@ -26,9 +32,10 @@ a:hover {
 input {
     color: white;
     border: 1px solid white;
-    background-color: #D93434;
+    background-color: #910000;
     margin: 5px 0px;
 }
+h1,h2,h3{line-height:1.2}
 </style>
 </head>
 
